--- a/package.json
+++ b/package.json
@@ -1,29 +1,17 @@
 {
-    "name": "insert-css",
-    "version": "0.2.0",
-    "description": "insert a string of css into the <head>",
+    "name": "link-css",
+    "version": "0.0.0",
+    "description": "insert a link of css into the <head>",
     "main": "index.js",
     "dependencies": {},
     "devDependencies": {
-        "tape": "^2.13.3",
         "computed-style": "~0.1.3"
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/substack/insert-css.git"
+        "url": "git://github.com/undoZen/link-css.git"
     },
-    "testling" : {
-        "files" : "test/*.js",
-        "browsers" : [
-            "ie/6..latest",
-            "chrome/20..latest",
-            "firefox/10..latest",
-            "safari/latest",
-            "opera/11.0..latest",
-            "iphone/6", "ipad/6"
-        ]
-    },
-    "homepage": "https://github.com/substack/insert-css",
+    "homepage": "https://github.com/undoZen/link-css",
     "keywords": [
         "css",
         "insert",
@@ -32,9 +20,9 @@
         "browserify"
     ],
     "author": {
-        "name": "James Halliday",
-        "email": "mail@substack.net",
-        "url": "http://substack.net"
+        "name": "undoZen",
+        "email": "opensource@undozen.com",
+        "url": "http://www.undozen.com"
     },
     "license": "MIT"
 }
